Resolve conversation.