@@ -16,6 +16,7 @@ import org.prebid.server.model.CaseInsensitiveMultiMap;
 import org.prebid.server.model.Endpoint;
 import org.prebid.server.model.HttpRequestContext;
 
+import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
@@ -69,7 +70,7 @@ public final class HttpUtil {
     public static final CharSequence CONTENT_ENCODING_HEADER = HttpHeaders.createOptimized("Content-Encoding");
     public static final CharSequence X_OPENRTB_VERSION_HEADER = HttpHeaders.createOptimized("x-openrtb-version");
     public static final CharSequence X_PREBID_HEADER = HttpHeaders.createOptimized("x-prebid");
-    private static final Set<String> SENSITIVE_HEADERS = new HashSet<>(List.of(AUTHORIZATION_HEADER.toString()));
+    private static final Set<String> SENSITIVE_HEADERS = new HashSet<>(Arrays.asList(AUTHORIZATION_HEADER.toString()));
     public static final CharSequence PG_TRX_ID = HttpHeaders.createOptimized("pg-trx-id");
 
     private static final String BASIC_AUTH_PATTERN = "Basic %s";
@@ -80,17 +81,9 @@ public final class HttpUtil {
     /**
      * Checks the input string for using as URL.
      */
-    public static String validateUrl(String url) throws IllegalArgumentException {
-        return makeUrlOrThrow(url).toString();
-    }
-
-    public static boolean isSecure(String url) throws IllegalArgumentException {
-        return makeUrlOrThrow(url).getProtocol().equals("https");
-    }
-
-    private static URL makeUrlOrThrow(String url) throws IllegalArgumentException {
+    public static String validateUrl(String url) {
         try {
-            return new URL(url);
+            return new URL(url).toString();
         } catch (MalformedURLException e) {
             throw new IllegalArgumentException(String.format("URL supplied is not valid: %s", url), e);
         }
@@ -102,7 +95,11 @@ public final class HttpUtil {
      * The result can be safety used as the query string.
      */
     public static String encodeUrl(String value) {
-        return URLEncoder.encode(value, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(value, "UTF-8");
+        } catch (UnsupportedEncodingException e) {
+            throw new IllegalArgumentException(String.format("Cannot encode url: %s", value));
+        }
     }
 
     /**
@@ -112,7 +109,11 @@ public final class HttpUtil {
         if (StringUtils.isBlank(value)) {
             return null;
         }
-        return URLDecoder.decode(value, StandardCharsets.UTF_8);
+        try {
+            return URLDecoder.decode(value, "UTF-8");
+        } catch (UnsupportedEncodingException e) {
+            throw new IllegalArgumentException(String.format("Cannot decode url: %s", value));
+        }
     }
 
     /**
